--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,9 +25,9 @@
     </header>
 
     <section class="hero">
-      <img src="style/logo.jpg" alt="Restaurante Mestiza Street Food" class="hero-img"
+      <img src="style/FOTO.png" alt="Restaurante Mestiza Street Food" class="hero-img"
         style="max-width: 350px; width: 100%; display: block; margin: 0 auto;">
-      <p class="horarios">A<br>DE LUNES A VIERNES 17 A 19 HS</p>
+      <p class="horarios">ABIERTO<br>DE LUNES A VIERNES 17 A 19 HS</p>
     </section>
 
 
