AGREGADOS AL FRONTEND

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,26 +27,18 @@
     <section class="hero">
       <img src="style/FOTO.png" alt="Restaurante Mestiza Street Food" class="hero-img"
         style="max-width: 350px; width: 100%; display: block; margin: 0 auto;">
-      <p class="horarios">ABIERTO<br>DE LUNES A VIERNES 17 A 19 HS</p>
+      <p class="horarios">ESTADO: ABIERTO<br>DE LUNES A VIERNES 17 A 19 HS</p>
     </section>
 
 
     <main>
       <section class="card">
         <div class="card-content">
-          <h1 class="card-title">Restaurante Mestiza</h1>
-          <p class="card-text">¡Bienvenido a Mestiza! eslogan</p>
-          <h2 class="card-title">Horarios</h2>
-          <ul class="card-text">
-            <h3>Lunes a Viernes: 12:00 - 22:00</h3>
-            <h3>Sábados y Domingos: 13:00 - 23:00</h3>
-          </ul>
-          <p class="card-text"><strong>Estado:</strong> ¡Abierto ahora!</p>
+          <p class="card-text"><strong>Especialidades de la Casa</strong></p>
         </div>
       </section>
 
       <section>
-        <h2 class="card-title">Especialidades de la Casa</h2>
         <div class="card-container">
           <div class="card">
             <img src="style/as.jpg" alt="Plato especial 1" width="100%">
@@ -74,9 +66,20 @@
     </main>
 
     <footer>
-      <p>Dirección: Calle Principal 123, Ciudad</p>
-      <p>Contacto: (555) 123-4567 | contacto@mestiza.com</p>
-      <p>&copy; 2025 Restaurante Mestiza</p>
+      <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000
+</p>
+      <p>+598 98 107 643</p>
+      <p>&copy; 2025 Mestiza Street Food</p>
+      <div class="social-media">
+    <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
+      <img src="style/Instagram-Logo.wine.png" alt="Instagram" class="social-icon">
+      <span>Instagram</span>
+    </a>
+    <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
+      <img src="style/facebook logo.webp" alt="Facebook" class="social-icon">
+      <span>Facebook</span>
+    </a>
+  </div>
     </footer>
 
   </body>
