commit nuevo santi

--- a/frontend/calendario.html
+++ b/frontend/calendario.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
 
   <!-- Tu CSS existente -->
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="./style/style.css">
 
   <style>
     /* Ajustes mínimos para el calendario */
@@ -69,10 +69,21 @@
   </main>
 
   <footer>
-    <p>Dirección: Calle Principal 123, Ciudad</p>
-    <p>Contacto: (555) 123-4567 | contacto@mestiza.com</p>
-    <p>&copy; 2025 Restaurante Mestiza</p>
-  </footer>
+      <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000
+</p>
+      <p>+598 98 107 643</p>
+      <p>&copy; 2025 Mestiza Street Food</p>
+      <div class="social-media">
+    <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
+      <img src="style/Instagram-Logo.wine.png" alt="Instagram" class="social-icon">
+      <span>Instagram</span>
+    </a>
+    <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
+      <img src="style/facebook logo.webp" alt="Facebook" class="social-icon">
+      <span>Facebook</span>
+    </a>
+  </div>
+    </footer>
 
   <!-- FullCalendar JS -->
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
