--- a/frontend/eventos.html
+++ b/frontend/eventos.html
@@ -16,7 +16,7 @@
   <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet" />
 
   <!-- Tu estilo personalizado -->
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -87,11 +87,22 @@
     </form>
   </main>
 
-  <footer>
-    <p>Dirección: Calle Principal 123, Ciudad</p>
-    <p>Contacto: (555) 123-4567 | contacto@mestiza.com</p>
-    <p>&copy; 2025 Restaurante Mestiza</p>
-  </footer>
+   <footer>
+      <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000
+</p>
+      <p>+598 98 107 643</p>
+      <p>&copy; 2025 Mestiza Street Food</p>
+      <div class="social-media">
+    <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
+      <img src="style/Instagram-Logo.wine.png" alt="Instagram" class="social-icon">
+      <span>Instagram</span>
+    </a>
+    <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
+      <img src="style/facebook logo.webp" alt="Facebook" class="social-icon">
+      <span>Facebook</span>
+    </a>
+  </div>
+    </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
