--- a/frontend/sobre_nosotros.html
+++ b/frontend/sobre_nosotros.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sobre Nosotros - Restaurante Mestiza</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -27,37 +27,50 @@
       <div class="card-content">
         <h1 class="card-title">Sobre Nosotros</h1>
         <p class="card-text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam laudantium sapiente, architecto, temporibus
-          neque veritatis, suscipit minima eius nisi tempora quibusdam eveniet consectetur reiciendis! Illo magnam saepe
-          exercitationem architecto ab.
+          Mestiza Sabores Caseros nació en Colonia del Sacramento en plena pandemia de 2020, cuando Daniel Abbona y su
+          familia decidieron transformar la incertidumbre en oportunidad. Lo que comenzó con una simple mesita en la
+          feria de los domingos, hoy es un emprendimiento gastronómico que se ha convertido en infaltable en ferias,
+          eventos y encuentros locales.
         </p>
         <p class="card-text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur amet quas, illo magni atque doloribus
-          obcaecati enim nesciunt porro quibusdam incidunt, voluptate hic, impedit quidem dolor velit culpa? Molestiae,
-          dolore.
+          Nuestro diferencial está en la artesanía y el corazón familiar que ponemos en cada plato. Elaboramos todo
+          nosotros mismos: desde las tortillas y encurtidos hasta las salsas picantes y aderezos que acompañan nuestros
+          tacos, smash burgers, bocatas y opciones vegetarianas y veganas. Cada bocado busca mantener un sabor único,
+          constante y reconocible, que represente quiénes somos.
         </p>
         <p class="card-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt et ducimus sed laborum quam adipisci id
-          delectus, mollitia incidunt. Harum maxime laudantium consectetur cumque commodi nam delectus corporis iste
-          incidunt!
+          De la feria y la rambla pasamos a tener nuestro propio food truck, el primero en Colonia, que nos permitió
+          ampliar la propuesta con hamburguesas de estilo americano y seguir creciendo junto a la comunidad que nos
+          apoya.
         </p>
         <p class="card-text">
-          lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est laborum.
+          Hoy seguimos recorriendo ferias gastronómicas y cerveceras, ofreciendo delivery cuando no estamos en eventos,
+          y acompañando también a familias, amigos y empresas en celebraciones privadas.
+        </p>
+        <p class="card-text">
+          Mestiza es eso: comida rápida hecha con cariño, tradición y el sabor casero de Uruguay, que creció desde lo
+          simple para convertirse en un lugar de encuentro y disfrute.
         </p>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>Dirección: Calle Principal 123, Ciudad</p>
-    <p>Contacto: (555) 123-4567 | contacto@mestiza.com</p>
-    <p>&copy; 2025 Restaurante Mestiza</p>
+    <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000
+    </p>
+    <p>+598 98 107 643</p>
+    <p>&copy; 2025 Mestiza Street Food</p>
+    <div class="social-media">
+      <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
+        <img src="style/Instagram-Logo.wine.png" alt="Instagram" class="social-icon">
+        <span>Instagram</span>
+      </a>
+      <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
+        <img src="style/facebook logo.webp" alt="Facebook" class="social-icon">
+        <span>Facebook</span>
+      </a>
+    </div>
   </footer>
-
 </body>
 
 </html>
