barra de navegacion mejorada. cambios en el css

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -28,11 +28,12 @@
 
     <!-- Hamburguesas -->
     <section class="mb-5">
+      <!-- de nuevo, hacer dinamico con js y que ellos puedan agregar y quitar los productos que se muestran-->
       <h2 class="mb-4">🍔 Hamburguesas</h2>
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card shadow-sm">
-            <img src="style/burger.jpg" class="card-img-top" alt="Mestiza Burger" />
+            <img src="style/assets/hamburguesa-placeholder.jpg" class="card-img-top" alt="Mestiza Burger" />
             <div class="card-body">
               <h5 class="card-title">Mestiza Burger</h5>
               <p class="card-text">
@@ -42,174 +43,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="style/classic_burger.jpg" class="card-img-top" alt="Clásica" />
-            <div class="card-body">
-              <h5 class="card-title">Clásica</h5>
-              <p class="card-text">
-                Carne simple, queso, lechuga, tomate y mayonesa.
-              </p>
-              <p class="fw-bold">$320</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="style/veggie_burger.jpg" class="card-img-top" alt="Veggie Burger" />
-            <div class="card-body">
-              <h5 class="card-title">Veggie</h5>
-              <p class="card-text">
-                Hamburguesa de lentejas, queso vegano, palta y rúcula.
-              </p>
-              <p class="fw-bold">$380</p>
-            </div>
-          </div>
-        </div>
-      </div>
+        
     </section>
 
-    <!-- Milanesas -->
-    <section class="mb-5">
-      <h2 class="mb-4">🍛 Milanesas</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="style/milanesa_napo.jpg" class="card-img-top" alt="Milanesa Napolitana" />
-            <div class="card-body">
-              <h5 class="card-title">Napolitana</h5>
-              <p class="card-text">
-                Milanesa con jamón, salsa y muzzarella.
-              </p>
-              <p class="fw-bold">$490</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="style/milanesa_caballo.jpg" class="card-img-top" alt="Milanesa a Caballo" />
-            <div class="card-body">
-              <h5 class="card-title">A Caballo</h5>
-              <p class="card-text">
-                Milanesa con 2 huevos fritos y papas.
-              </p>
-              <p class="fw-bold">$520</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="style/milanesa_clasica.jpg" class="card-img-top" alt="Milanesa Clásica" />
-            <div class="card-body">
-              <h5 class="card-title">Clásica</h5>
-              <p class="card-text">
-                Con guarnición a elección.
-              </p>
-              <p class="fw-bold">$450</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <!-- Platos especiales -->
-    <section class="mb-5">
-      <h2 class="mb-4">🍽️ Platos Especiales</h2>
-      <div class="row g-4">
-        <div class="col-md-6">
-          <div class="card shadow-sm">
-            <img src="style/chivito.jpg" class="card-img-top" alt="Chivito al Plato" />
-            <div class="card-body">
-              <h5 class="card-title">Chivito al Plato</h5>
-              <p class="card-text">
-                Con papas, huevo, jamón, muzza y más.
-              </p>
-              <p class="fw-bold">$620</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card shadow-sm">
-            <img src="style/fideos_caseros.jpg" class="card-img-top" alt="Fideos Caseros" />
-            <div class="card-body">
-              <h5 class="card-title">Fideos Caseros</h5>
-              <p class="card-text">
-                Salsa a elección.
-              </p>
-              <p class="fw-bold">$390</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Bebidas -->
-    <section class="mb-5">
-      <h2 class="mb-4">🥤 Bebidas</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card shadow-sm text-center p-3">
-            <h5 class="card-title">Refrescos 500ml</h5>
-            <p class="fw-bold">$120</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm text-center p-3">
-            <h5 class="card-title">Cerveza</h5>
-            <p class="fw-bold">$179</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm text-center p-3">
-            <h5 class="card-title">Agua Mineral</h5>
-            <p class="fw-bold">$100</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Postres -->
-    <section class="mb-5">
-      <h2 class="mb-4">🍰 Postres</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="style/flan.jpg" class="card-img-top" alt="Flan Casero" />
-            <div class="card-body">
-              <h5 class="card-title">Flan Casero</h5>
-              <p class="card-text">
-                Con dulce de leche.
-              </p>
-              <p class="fw-bold">$180</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="style/brownie.jpg" class="card-img-top" alt="Brownie con Helado" />
-            <div class="card-body">
-              <h5 class="card-title">Brownie con Helado</h5>
-              <p class="card-text">
-                Postre casero servido con una bocha de helado.
-              </p>
-              <p class="fw-bold">$220</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="style/helado.jpg" class="card-img-top" alt="Helado 2 Sabores" />
-            <div class="card-body">
-              <h5 class="card-title">Helado 2 Sabores</h5>
-              <p class="card-text">
-                Dos sabores a elección.
-              </p>
-              <p class="fw-bold">$160</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
   </main>
 
    <footer>
