--- a/frontend/sobre_nosotros.html
+++ b/frontend/sobre_nosotros.html
@@ -10,15 +10,26 @@
 
 <body>
   <header>
-    <nav class="navbar">
-      <ul class="navbar-list">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="sobre_nosotros.html">Sobre Nosotros</a></li>
-        <li><a href="opiniones.html">Opiniones</a></li>
-        <li><a href="menu.html">Menú</a></li>
-        <li><a href="eventos.html">Reservas</a></li>
-        <li><a href="calendario.html">Calendario</a></li>
-      </ul>
+     <nav id="navMenu">
+        
+          <button type="button" onclick="window.location = 'index.html';"> 
+              Inicio
+          </button>
+          <button type="button" onclick="window.location = 'sobre_nosotros.html';"> 
+              Sobre Nosotros
+          </button>
+          <button type="button" onclick="window.location = 'opiniones.html';"> 
+              Opiniones
+          </button>
+          <button type="button" onclick="window.location = 'menu.html';"> 
+              Menú
+          </button>
+          <button type="button" onclick="window.location = 'eventos.html';"> 
+              Reservas
+          </button>
+          <button type="button" onclick="window.location = 'calendario.html';"> 
+              Calendario
+          </button>
     </nav>
   </header>
 
