--- a/frontend/opiniones.html
+++ b/frontend/opiniones.html
@@ -13,27 +13,18 @@
 
   <body>
     <header>
-    <nav id="navMenu">
-        
-          <button type="button" onclick="window.location = 'index.html';"> 
-              Inicio
-          </button>
-          <button type="button" onclick="window.location = 'sobre_nosotros.html';"> 
-              Sobre Nosotros
-          </button>
-          <button type="button" onclick="window.location = 'opiniones.html';"> 
-              Opiniones
-          </button>
-          <button type="button" onclick="window.location = 'menu.html';"> 
-              Menú
-          </button>
-          <button type="button" onclick="window.location = 'eventos.html';"> 
-              Reservas
-          </button>
-          <button type="button" onclick="window.location = 'calendario.html';"> 
-              Calendario
-          </button>
-    </nav>
+   <nav id="navMenu">
+  <div class="nav-left">
+    <button type="button" onclick="window.location = 'index.html';">Inicio</button>
+    <button type="button" onclick="window.location = 'sobre_nosotros.html';">Sobre Nosotros</button>
+    <button type="button" onclick="window.location = 'opiniones.html';">Opiniones</button>
+    <button type="button" onclick="window.location = 'menu.html';">Menú</button>
+  </div>
+  <div class="nav-right">
+    <button type="button" onclick="window.location = 'eventos.html';">Reservas</button>
+    <button type="button" onclick="window.location = 'calendario.html';">Calendario</button>
+  </div>
+</nav>
     </header>
 
     <main class="container my-5">
