--- a/frontend/calendario.html
+++ b/frontend/calendario.html
@@ -14,64 +14,20 @@
 
   <!-- Tu CSS existente -->
   <link rel="stylesheet" href="./style/style.css">
-
-  <style>
-    /* Ajustes mínimos para el calendario */
-    #calendar {
-      max-width: 900px;
-      margin: 0 auto;
-      background: white;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 6px 18px rgb(0 0 0 / 0.08);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    /* Resaltar día actual */
-    .fc-day-today {
-      background-color: #fdebd0 !important;
-      border-radius: 8px;
-    }
-
-    /* Eventos personalizados */
-    .fc-event {
-      border: none !important;
-      border-radius: 6px !important;
-      box-shadow: 0 2px 8px rgba(211, 84, 0, 0.6) !important;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .fc-event:hover {
-      background-color: #e67e22 !important;
-      box-shadow: 0 3px 10px rgba(230, 126, 34, 0.8) !important;
-    }
-  </style>
-</head>
-
 <body>
   <header>
      <nav id="navMenu">
-        
-          <button type="button" onclick="window.location = 'index.html';"> 
-              Inicio
-          </button>
-          <button type="button" onclick="window.location = 'sobre_nosotros.html';"> 
-              Sobre Nosotros
-          </button>
-          <button type="button" onclick="window.location = 'opiniones.html';"> 
-              Opiniones
-          </button>
-          <button type="button" onclick="window.location = 'menu.html';"> 
-              Menú
-          </button>
-          <button type="button" onclick="window.location = 'eventos.html';"> 
-              Reservas
-          </button>
-          <button type="button" onclick="window.location = 'calendario.html';"> 
-              Calendario
-          </button>
-    </nav>
+  <div class="nav-left">
+    <button type="button" onclick="window.location = 'index.html';">Inicio</button>
+    <button type="button" onclick="window.location = 'sobre_nosotros.html';">Sobre Nosotros</button>
+    <button type="button" onclick="window.location = 'opiniones.html';">Opiniones</button>
+    <button type="button" onclick="window.location = 'menu.html';">Menú</button>
+  </div>
+  <div class="nav-right">
+    <button type="button" onclick="window.location = 'eventos.html';">Reservas</button>
+    <button type="button" onclick="window.location = 'calendario.html';">Calendario</button>
+  </div>
+</nav>
   </header>
 
   <main class="container my-5">
