--- a/frontend/opiniones.html
+++ b/frontend/opiniones.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Opiniones - Restaurante Mestiza</title>
@@ -8,104 +7,94 @@
   <link rel="stylesheet" href="./style/style.css">
   <meta charset="UTF-8">
 </head>
-
 <body>
-
-  <body>
-    <header>
-   <nav id="navMenu">
-  <div class="nav-left">
-    <button type="button" onclick="window.location = 'index.html';">Inicio</button>
-    <button type="button" onclick="window.location = 'sobre_nosotros.html';">Sobre Nosotros</button>
-    <button type="button" onclick="window.location = 'opiniones.html';">Opiniones</button>
-    <button type="button" onclick="window.location = 'menu.html';">Menú</button>
-  </div>
-  <div class="nav-right">
-    <button type="button" onclick="window.location = 'eventos.html';">Reservas</button>
-    <button type="button" onclick="window.location = 'calendario.html';">Calendario</button>
-  </div>
-</nav>
-    </header>
-
-    <main class="container my-5">
-      <h1 class="text-center mb-4">Opiniones de Clientes</h1>
-
-      <div class="row g-4 mb-5">
-        <div class="col-md-6">
-          <div class="border p-3 rounded bg-light">
-            <h5>Carla M.</h5>
-            <p class="mb-1">⭐⭐⭐⭐⭐</p>
-            <p>¡La comida es espectacular! La hamburguesa 'Mestiza' es mi nueva favorita.</p>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="border p-3 rounded bg-light">
-            <h5>Lucas R.</h5>
-            <p class="mb-1">⭐⭐⭐⭐</p>
-            <p>Un lugar ideal para cenar con amigos. Todo muy rico y la atención genial.</p>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="border p-3 rounded bg-light">
-            <h5>Sofía T.</h5>
-            <p class="mb-1">⭐⭐⭐⭐⭐</p>
-            <p>Me encantó el ambiente y el menú. Recomiendo la milanesa con papas.</p>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="border p-3 rounded bg-light">
-            <h5>Martín G.</h5>
-            <p class="mb-1">⭐⭐⭐⭐</p>
-            <p>Volvería sin dudas. Buena comida, buenos precios y atención rápida.</p>
-          </div>
+  <header>
+    <nav id="navMenu">
+      <div class="nav-left">
+        <button type="button" onclick="window.location = 'index.html';">Inicio</button>
+        <button type="button" onclick="window.location = 'sobre_nosotros.html';">Sobre Nosotros</button>
+        <button type="button" onclick="window.location = 'opiniones.html';">Opiniones</button>
+        <button type="button" onclick="window.location = 'menu.html';">Menú</button>
+      </div>
+      <div class="nav-right">
+        <button type="button" onclick="window.location = 'eventos.html';">Reservas</button>
+        <button type="button" onclick="window.location = 'calendario.html';">Calendario</button>
+      </div>
+    </nav>
+  </header>
+  <main class="container my-5">
+    <h1 class="text-center mb-4">Opiniones de Clientes</h1>
+    <!-- Contenedor dinámico -->
+    <div id="opiniones-list" class="mb-5"></div>
+    <hr class="my-5">
+    <h2 class="mb-3">Dejanos tu Opinión</h2>
+    <form id="form-opinion">
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre:</label>
+        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Tu nombre" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Puntuación:</label>
+        <div class="star-rating">
+          <input type="radio" name="puntuacion" id="5-stars" value="5" required><label for="5-stars">★</label>
+          <input type="radio" name="puntuacion" id="4-stars" value="4"><label for="4-stars">★</label>
+          <input type="radio" name="puntuacion" id="3-stars" value="3"><label for="3-stars">★</label>
+          <input type="radio" name="puntuacion" id="2-stars" value="2"><label for="2-stars">★</label>
+          <input type="radio" name="puntuacion" id="1-star" value="1"><label for="1-star">★</label>
         </div>
       </div>
+      <div class="mb-3">
+        <label for="comentario" class="form-label">Comentario:</label>
+        <textarea class="form-control" id="comentario" name="opinion" rows="4" placeholder="Contanos tu experiencia..." required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar Opinión</button>
+    </form>
+  </main>
+  <footer>
+    <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
+    <p>+598 98 107 643</p>
+    <p>&copy; 2025 Mestiza Street Food</p>
+    <div class="social-media">
+      <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
+        <img src="style/Instagram-Logo.wine.png" alt="Instagram" class="social-icon">
+        <span>Instagram</span>
+      </a>
+      <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
+        <img src="style/facebook logo.webp" alt="Facebook" class="social-icon">
+        <span>Facebook</span>
+      </a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Mostrar opiniones
+    function cargarOpiniones() {
+      fetch('php/mostrar_opiniones.php')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('opiniones-list').innerHTML = html;
+        });
+    }
+    cargarOpiniones();
 
-      <hr class="my-5">
-      <h2 class="mb-3">Dejanos tu Opinión</h2>
-      <form>
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre:</label>
-          <input type="text" class="form-control" id="nombre" placeholder="Tu nombre">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Puntuación:</label>
-          <div class="star-rating">
-            <input type="radio" name="rating" id="5-stars" value="5"><label for="5-stars">★</label>
-            <input type="radio" name="rating" id="4-stars" value="4"><label for="4-stars">★</label>
-            <input type="radio" name="rating" id="3-stars" value="3"><label for="3-stars">★</label>
-            <input type="radio" name="rating" id="2-stars" value="2"><label for="2-stars">★</label>
-            <input type="radio" name="rating" id="1-star" value="1"><label for="1-star">★</label>
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="comentario" class="form-label">Comentario:</label>
-          <textarea class="form-control" id="comentario" rows="4" placeholder="Contanos tu experiencia..."></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar Opinión</button>
-      </form>
-    </main>
-
-     <footer>
-      <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000
-</p>
-      <p>+598 98 107 643</p>
-      <p>&copy; 2025 Mestiza Street Food</p>
-      <div class="social-media">
-    <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-      <img src="style/Instagram-Logo.wine.png" alt="Instagram" class="social-icon">
-      <span>Instagram</span>
-    </a>
-    <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-      <img src="style/facebook logo.webp" alt="Facebook" class="social-icon">
-      <span>Facebook</span>
-    </a>
-  </div>
-    </footer>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
-
-
+    // Enviar opinión
+    document.getElementById('form-opinion').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+      fetch('php/guardar_opinion.php', {
+        method: 'POST',
+        body: formData
+      })
+      .then(response => response.text())
+      .then(res => {
+        if (res.trim() === "ok") {
+          this.reset();
+          cargarOpiniones();
+        } else {
+          alert("Error al guardar la opinión. Completa todos los campos.");
+        }
+      });
+    });
+  </script>
+</body>
 </html>
