--- a/frontend/sobre_nosotros.html
+++ b/frontend/sobre_nosotros.html
@@ -25,7 +25,7 @@
   </header>
 
   <main>
-    <section class="card">
+    <section class="text">
       <div class="card-content">
         <h1 class="card-title">Sobre Nosotros</h1>
         <p class="card-text">
