--- a/fronted-mejor/index.html
+++ b/fronted-mejor/index.html
@@ -32,10 +32,10 @@
   <p>&copy; 2025 Mestiza Street Food</p>
   <div class="social-media">
     <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-      <img src="./imagenes/Instagram-Logo.wine.png" alt="Instagram" class="social-icon">
+      <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
     </a>
     <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-      <img src="./imagenes/facebook logo.webp" alt="Facebook" class="social-icon">
+      <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
     </a>
   </div>
 </footer>
