COMMIT NUEVO PAGINA MEJOR

--- a/fronted-mejor/index.html
+++ b/fronted-mejor/index.html
@@ -4,27 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio - Restaurante Mestiza</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
+<body class="pagina-negra"></body>
   <header>
-    <nav class="navbar">
-      <div class="nav-left">
-        <a href="index.html">Inicio</a>
-        <a href="sobre_nosotros.html">Sobre Nosotros</a>
-        <a href="opiniones.html">Opiniones</a>
-        <a href="menu.html">Menú</a>
-      </div>
-      <div class="nav-right">
-        <a href="reservas.html">Reservas</a>
-        <a href="calendario.html">Calendario</a>
-      </div>
-    </nav>
+   <nav class="navbar">
+  <div class="nav-left">
+    <a href="index.html" title="Inicio">
+      <img src="imagenes/pagina-de-inicio.png" alt="Inicio" class="social-icon">
+    </a>
+    <a href="sobre_nosotros.html" title="Sobre Nosotros">
+      <img src="imagenes/gente.png" alt="Sobre Nosotros" class="social-icon">
+    </a>
+    <a href="opiniones.html" title="Opiniones">
+      <img src="imagenes/opinion-del-cliente.png" alt="Opiniones" class="social-icon">
+    </a>
+    <a href="menu.html" title="Menú">
+      <img src="imagenes/bandeja-de-comida.png" alt="Menú" class="social-icon">
+    </a>
+  </div>
+  <div class="nav-right">
+    <a href="reservas.html" title="Reservas">
+      <img src="imagenes/recepcion.png" alt="Reservas" class="social-icon">
+    </a>
+    <a href="calendario.html" title="Calendario">
+      <img src="imagenes/calendario.png" alt="Calendario" class="social-icon">
+    </a>
+  </div>
+</nav>
   </header>
 
   <main>
-    <h1>Bienvenido a Restaurante Mestiza</h1>
-  </main>
+  <div class="logo-container">
+    <img src="imagenes/FOTO.png" alt="Logo Mestiza" class="logo-mestiza">
+  </div>
+  <p class="horarios">
+    ABIERTO<br>
+    <!-- En un futuro debe ser dinamico -->
+    Lunes a Viernes: 17:00 a 19:00<br>
+    Sábados y Domingos: 13:00 a 23:00
+  </p>
+  <div class="contenido-blanco"></div>
+</main>
 
 <footer>
   <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
