--- a/fronted-mejor/menu.html
+++ b/fronted-mejor/menu.html
@@ -4,22 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menú</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style/style.css">
 </head>
+<body class="pagina-blanca">
+
 <body>
   <header>
-    <nav class="navbar">
-      <div class="nav-left">
-        <a href="index.html">Inicio</a>
-        <a href="sobre_nosotros.html">Sobre Nosotros</a>
-        <a href="opiniones.html">Opiniones</a>
-        <a href="menu.html">Menú</a>
-      </div>
-      <div class="nav-right">
-        <a href="reservas.html">Reservas</a>
-        <a href="calendario.html">Calendario</a>
-      </div>
-    </nav>
+     <nav class="navbar">
+  <div class="nav-left">
+    <a href="index.html" title="Inicio">
+      <img src="imagenes/pagina-de-inicio.png" alt="Inicio" class="social-icon">
+    </a>
+    <a href="sobre_nosotros.html" title="Sobre Nosotros">
+      <img src="imagenes/gente.png" alt="Sobre Nosotros" class="social-icon">
+    </a>
+    <a href="opiniones.html" title="Opiniones">
+      <img src="imagenes/opinion-del-cliente.png" alt="Opiniones" class="social-icon">
+    </a>
+    <a href="menu.html" title="Menú">
+      <img src="imagenes/bandeja-de-comida.png" alt="Menú" class="social-icon">
+    </a>
+  </div>
+  <div class="nav-right">
+    <a href="reservas.html" title="Reservas">
+      <img src="imagenes/recepcion.png" alt="Reservas" class="social-icon">
+    </a>
+    <a href="calendario.html" title="Calendario">
+      <img src="imagenes/calendario.png" alt="Calendario" class="social-icon">
+    </a>
+  </div>
+</nav>
   </header>
   <main>
     <section>
