--- a/fronted-mejor/calendario.html
+++ b/fronted-mejor/calendario.html
@@ -13,23 +13,35 @@
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
 
   <!-- Tu CSS existente -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 
-<body>
+<body class="pagina-blanca">
   <header>
     <nav class="navbar">
-      <div class="nav-left">
-        <a href="index.html">Inicio</a>
-        <a href="sobre_nosotros.html">Sobre Nosotros</a>
-        <a href="opiniones.html">Opiniones</a>
-        <a href="menu.html">Menú</a>
-      </div>
-      <div class="nav-right">
-        <a href="reservas.html">Reservas</a>
-        <a href="calendario.html">Calendario</a>
-      </div>
-    </nav>
+  <div class="nav-left">
+    <a href="index.html" title="Inicio">
+      <img src="imagenes/pagina-de-inicio.png" alt="Inicio" class="social-icon">
+    </a>
+    <a href="sobre_nosotros.html" title="Sobre Nosotros">
+      <img src="imagenes/gente.png" alt="Sobre Nosotros" class="social-icon">
+    </a>
+    <a href="opiniones.html" title="Opiniones">
+      <img src="imagenes/opinion-del-cliente.png" alt="Opiniones" class="social-icon">
+    </a>
+    <a href="menu.html" title="Menú">
+      <img src="imagenes/bandeja-de-comida.png" alt="Menú" class="social-icon">
+    </a>
+  </div>
+  <div class="nav-right">
+    <a href="reservas.html" title="Reservas">
+      <img src="imagenes/recepcion.png" alt="Reservas" class="social-icon">
+    </a>
+    <a href="calendario.html" title="Calendario">
+      <img src="imagenes/calendario.png" alt="Calendario" class="social-icon">
+    </a>
+  </div>
+</nav>
 
   <main class="container my-5">
     <h1 class="text-center card-title">Calendario de Eventos</h1>
