--- a/fronted-mejor/opiniones.html
+++ b/fronted-mejor/opiniones.html
@@ -1,67 +1,114 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Opiniones - Restaurante Mestiza</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./style/style.css">
+  <meta charset="UTF-8">
 </head>
+<body class="pagina-blanca">
+
 <body>
   <header>
     <nav class="navbar">
-      <div class="nav-left">
-        <a href="index.html">Inicio</a>
-        <a href="sobre_nosotros.html">Sobre Nosotros</a>
-        <a href="opiniones.html">Opiniones</a>
-        <a href="menu.html">Menú</a>
-      </div>
-      <div class="nav-right">
-        <a href="reservas.html">Reservas</a>
-        <a href="calendario.html">Calendario</a>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h1>Opiniones</h1>
-      <div id="opiniones-historial">
-        <h2>Historial de Opiniones</h2>
-        <ul id="lista-opiniones">
-          <!-- Aquí se mostrarán las opiniones -->
-        </ul>
-      </div>
-      <div id="nueva-opinion">
-        <h2>Deja tu Opinión</h2>
-        <form id="form-opinion">
-          <label for="estrellas">Calificación:</label>
-          <div class="star-rating">
-            <input type="radio" id="estrella5" name="rating" value="5">
-            <label for="estrella5">★</label>
-            <input type="radio" id="estrella4-5" name="rating" value="4.5">
-            <label for="estrella4-5">☆</label>
-            <input type="radio" id="estrella4" name="rating" value="4">
-            <label for="estrella4">★</label>
-            <!-- Continúa con las demás estrellas -->
-          </div>
-          <label for="comentario">Comentario:</label>
-          <textarea id="comentario" name="comentario" rows="4" required></textarea>
-          <button type="submit">Enviar Opinión</button>
-        </form>
-      </div>
-    </section>
-  </main>
-<footer>
-  <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
-  <p>+598 98 107 643</p>
-  <p>&copy; 2025 Mestiza Street Food</p>
-  <div class="social-media">
-    <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-      <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
+  <div class="nav-left">
+    <a href="index.html" title="Inicio">
+      <img src="imagenes/pagina-de-inicio.png" alt="Inicio" class="social-icon">
     </a>
-    <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-      <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
+    <a href="sobre_nosotros.html" title="Sobre Nosotros">
+      <img src="imagenes/gente.png" alt="Sobre Nosotros" class="social-icon">
+    </a>
+    <a href="opiniones.html" title="Opiniones">
+      <img src="imagenes/opinion-del-cliente.png" alt="Opiniones" class="social-icon">
+    </a>
+    <a href="menu.html" title="Menú">
+      <img src="imagenes/bandeja-de-comida.png" alt="Menú" class="social-icon">
     </a>
   </div>
-</footer>
+  <div class="nav-right">
+    <a href="reservas.html" title="Reservas">
+      <img src="imagenes/recepcion.png" alt="Reservas" class="social-icon">
+    </a>
+    <a href="calendario.html" title="Calendario">
+      <img src="imagenes/calendario.png" alt="Calendario" class="social-icon">
+    </a>
+  </div>
+</nav>
+  </header>
+  <main class="container my-5">
+    <h1 class="text-center mb-4">Opiniones de Clientes</h1>
+    <!-- Contenedor dinámico -->
+    <div id="opiniones-list" class="mb-5"></div>
+    <hr class="my-5">
+    <h2 class="mb-3">Dejanos tu Opinión</h2>
+    <form id="form-opinion">
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre:</label>
+        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Tu nombre" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Puntuación:</label>
+        <div class="star-rating">
+          <input type="radio" name="puntuacion" id="5-stars" value="5" required><label for="5-stars">★</label>
+          <input type="radio" name="puntuacion" id="4-stars" value="4"><label for="4-stars">★</label>
+          <input type="radio" name="puntuacion" id="3-stars" value="3"><label for="3-stars">★</label>
+          <input type="radio" name="puntuacion" id="2-stars" value="2"><label for="2-stars">★</label>
+          <input type="radio" name="puntuacion" id="1-star" value="1"><label for="1-star">★</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="comentario" class="form-label">Comentario:</label>
+        <textarea class="form-control" id="comentario" name="opinion" rows="4" placeholder="Contanos tu experiencia..." required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar Opinión</button>
+    </form>
+  </main>
+  <footer>
+    <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
+    <p>+598 98 107 643</p>
+    <p>&copy; 2025 Mestiza Street Food</p>
+    <div class="social-media">
+      <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
+        <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
+        <span>Instagram</span>
+      </a>
+      <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
+        <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
+        <span>Facebook</span>
+      </a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Mostrar opiniones
+    function cargarOpiniones() {
+      fetch('php/mostrar_opiniones.php')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('opiniones-list').innerHTML = html;
+        });
+    }
+    cargarOpiniones();
+
+    // Enviar opinión
+    document.getElementById('form-opinion').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+      fetch('php/guardar_opinion.php', {
+        method: 'POST',
+        body: formData
+      })
+      .then(response => response.text())
+      .then(res => {
+        if (res.trim() === "ok") {
+          this.reset();
+          cargarOpiniones();
+        } else {
+          alert("Error al guardar la opinión. Completa todos los campos.");
+        }
+      });
+    });
+  </script>
 </body>
 </html>
