--- a/fronted-mejor/reservas.html
+++ b/fronted-mejor/reservas.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservas</title>
+
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
+  <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet" />
+
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body class="pagina-blanca">
@@ -35,25 +42,58 @@
   </div>
 </nav>
   </header>
-  <main>
-    <section>
-      <h1>Reservas</h1>
-      <form id="form-reservas">
-        <label for="nombre">Nombre Completo:</label>
-        <input type="text" id="nombre" name="nombre" required>
-        <label for="telefono">Teléfono:</label>
-        <input type="tel" id="telefono" name="telefono" required>
-        <label for="fecha">Fecha:</label>
-        <input type="date" id="fecha" name="fecha" required>
-        <label for="hora">Hora:</label>
-        <input type="time" id="hora" name="hora" required>
-        <label for="lugar">Lugar:</label>
-        <input type="text" id="lugar" name="lugar" required>
-        <label for="tiempo">Duración (en horas):</label>
-        <input type="number" id="tiempo" name="tiempo" required>
-        <button type="submit">Reservar</button>
-      </form>
-    </section>
+   <main class="container my-5">
+    <h1 class="text-center mb-4">Reserva tu mesa</h1>
+    <form id="reservaForm" class="mx-auto" style="max-width: 600px;" novalidate>
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre completo</label>
+        <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required />
+        <div class="invalid-feedback">Por favor, ingresa tu nombre.</div>
+      </div>
+
+      <div class="mb-3">
+        <label for="telefono" class="form-label">Teléfono</label>
+        <input type="tel" class="form-control" id="telefono" placeholder="Ej: +598 99 123 456" required
+          pattern="[\+0-9\s\-]+" />
+        <div class="invalid-feedback">Por favor, ingresa un teléfono válido.</div>
+      </div>
+
+      <div class="mb-3">
+        <label for="email" class="form-label">Correo electrónico</label>
+        <input type="email" class="form-control" id="email" placeholder="tu@email.com" required />
+        <div class="invalid-feedback">Por favor, ingresa un correo válido.</div>
+      </div>
+
+      <div class="row g-3 mb-3">
+        <div class="col-md-6">
+          <label for="fecha" class="form-label">Fecha</label>
+          <input type="date" class="form-control" id="fecha" required min="" />
+          <div class="invalid-feedback">Selecciona una fecha válida.</div>
+        </div>
+        <div class="col-md-6">
+          <label for="hora" class="form-label">Hora</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="hora" placeholder="Selecciona la hora" required />
+            <span class="input-group-text"><i class="bi bi-clock"></i></span>
+          </div>
+          <div class="invalid-feedback">Selecciona una hora.</div>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="personas" class="form-label">Cantidad de personas</label>
+        <input type="number" class="form-control" id="personas" min="1" max="20" value="2" required />
+        <div class="invalid-feedback">Indica cuántas personas serán.</div>
+      </div>
+
+      <div class="mb-4">
+        <label for="comentarios" class="form-label">Comentarios (opcional)</label>
+        <textarea class="form-control" id="comentarios" rows="3"
+          placeholder="¿Alguna preferencia o requerimiento especial?"></textarea>
+      </div>
+
+      <button type="submit" class="btn btn-primary w-100">Enviar reserva</button>
+    </form>
   </main>
  <footer>
   <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
@@ -68,5 +108,9 @@
     </a>
   </div>
 </footer>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="./js/reserva.js" defer></script>
+
 </body>
 </html>
