--- a/fronted-mejor/reservas.html
+++ b/fronted-mejor/reservas.html
@@ -5,12 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservas</title>
 
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-
-  <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet" />
-
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body class="pagina-blanca">
@@ -42,6 +36,12 @@
   </div>
 </nav>
   </header>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
+  <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet" />
+
    <main class="container my-5">
     <h1 class="text-center mb-4">Reserva tu mesa</h1>
     <form id="reservaForm" class="mx-auto" style="max-width: 600px;" novalidate>
@@ -110,7 +110,7 @@
 </footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<script src="./js/reserva.js" defer></script>
+    <script src="js/reserva.js"></script>
 
 </body>
 </html>
